# matisse-pipeline

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
src/matisse/: types.py
src/matisse/cli/: calibrate.py  doctor.py  format_results.py  magic_numbers.py  main.py  reduce.py  show.py
src/matisse/core/: auto_calib.py  auto_pipeline.py  lib_auto_calib.py  tidyup.py
src/matisse/legacy/: README_mat_fluxCal  __init__.py  catalog.txt  libAutoPipeline.py  libShowOifits.py  mat_FringeJumpsGD.py  mat_create_cal_catalog.py  mat_fluxCal.py  mat_listStars.py  mat_logger.py  mat_showAcq.py  mat_showBadPix.py  mat_showKappa.py  mat_showOPD.py  mat_showOiData.py  mat_showRawData.py  mat_showUV.py  mat_tidyupOiFits.py  mat_visampToVis2.py
src/matisse/viewer/: viewer_plotly.py
src/matisse_pipeline/: __init__.py  cli.py  types.py
src/matisse_pipeline/cli/: calibrate.py  doctor.py  format_results.py  magic_numbers.py  main.py  reduce.py  show.py
src/matisse_pipeline/core/: auto_calib.py  auto_pipeline.py  lib_auto_calib.py  lib_auto_pipeline.py  tidyup.py
src/matisse_pipeline/legacy/: __init__.py  (+17 more)
tests/: conftest.py  test_auto_pipeline.py  test_bcd_magic.py  test_calibration.py  test_cli.py  test_import.py  test_matisse_lib.py  test_tidyup.py  test_utils.py  test_viewer.py
tests/data/: MATIS_calibrator-LM_reduced.fits  MATIS_science-LM_reduced.fits  MATIS_target_raw.fits  fake_LAMP_noConf_IR-LM_LOW_IN_IN_noChop.fits  fake_LAMP_noConf_IR-LM_LOW_OUT_OUT_noChop.fits  real_data1.fits
(+16 files in other folders)
